Made fonts accessible via https://

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Concentration</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="//fonts.googleapis.com/css?family=Play:400,700&amp;subset=cyrillic-ext,latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Play:400,700&amp;subset=cyrillic-ext,latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
   <script>
     var version = '1.0';
