--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
   <link href="https://fonts.googleapis.com/css?family=Play:400,700&amp;subset=cyrillic-ext,latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
   <script>
-    var version = '1.0';
+    var version = '1.0(Pure ES6 + BEM)';
   </script>
 </head>
 <body>
-  <header>
+  <header class="header">
     <div class="nav-wrap">
       <input class="burger-check" id="burger-check" type="checkbox">
       <label for="burger-check" class="burger"></label>
       <nav class="navigation">
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#game">The Game</a></li>
-          <li><a href="#instructions">Instructions</a></li>
-          <li><a href="#about_us">About us</a></li>
+        <ul class="navigation__list">
+          <li class="navigation__item"><a href="#home">Home</a></lic>
+          <li class="navigation__item"><a href="#game">The Game</a></li>
+          <li class="navigation__item"><a href="#instructions">Instructions</a></li>
+          <li class="navigation__item"><a href="#about_us">About us</a></li>
         </ul>
       </nav>
     </div>
