--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Play:400,700&amp;subset=cyrillic-ext,latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
   <script>
-    var version = '1.0(Pure ES6 + BEM)';
+    var version = '1.1(Improved Code Architecture in JS and HTML)';
   </script>
 </head>
 <body>
@@ -43,7 +43,7 @@
     <div class="grid">
     </div>
     <div class="time-spent">
-      <button id="start-game" class="button" onclick="startGame(event);">Start Game</button>
+      <button id="start-game" class="button" onclick="concentrationGame.startGame(event);">Start Game</button>
       <span id="mins">00</span>
       <span class="delimiter">:</span>
       <span id="secs">00</span>
